--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiikat to-do and notes</title>
-    <script src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="js\script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style\style.css" />
 </head>
 <body>
     <h1 class="title">Hello</h1>
