changes in css and html

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiikat to-do and notes</title>
     <script src="js\script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style\style.css" />
 </head>
 <body>
-    <h1 class="title">Hello</h1>
+    <h1 data-text="All of your to-do lists and notes">All of your to-do lists and notes</h1>
 </body>
 </html>
