--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kiikat to-do and notes</title>
+    <title>Kiikat's weather app</title>
     <script src="js\script.js"></script>
     <link rel="stylesheet" type="text/css" href="style\style.css" />
 </head>
 <body>
-    <h2 data-text="All of your to-do lists and notes">All of your to-do lists and notes</h2>
+    <h2 class="title" data-text="Check local weather">Check local weather</h2>
 </body>
 </html>
